# hackathon_2018

c#/: netcode.cs
c#/Examples/: CMakeLists.txt
c#/Examples/cmake/: BuildCSharp.cmake  FindCSC.cmake  FindLeap.cmake  FindMono.cmake
c#/Examples/cpp/: AmplitudeModulation_Dial.cpp  AmplitudeModulation_HandTracking.cpp  AmplitudeModulation_MultiDevice.cpp  AmplitudeModulation_MultiDeviceHandTracking.cpp  AmplitudeModulation_MultiDeviceHandTrackingDirectional.cpp  AmplitudeModulation_Square.cpp  CMakeLists.txt  TimePointStreaming_CachedPoint.cpp  TimePointStreaming_Circle.cpp  TimePointStreaming_Dynamic.cpp  TimePointStreaming_Focus.cpp  TimePointStreaming_Forcefield.cpp  TimePointStreaming_Freeform.cpp  TimePointStreaming_FreeformTracking.cpp  TimePointStreaming_MultiDeviceFocus.cpp  TimePointStreaming_MultiDeviceForcefield.cpp  TimePointStreaming_MultiPoint.cpp  TimePointStreaming_Square.cpp  WaveformData.hpp
c#/Examples/csharp/: CMakeLists.txt  CSharp_AmplitudeModulation_Focus.cs  CSharp_AmplitudeModulation_MultiDeviceFocus.cs  CSharp_Button_Click.cs  CSharp_TimepointStreaming_Focus.cs
c#/UHProjectTemplate/: CSharp_Button_Click.cs  Program.cs  UHProjectTemplate.csproj  UHProjectTemplate.sln  netcode.cs  netcode_test.cs  test.cs
python/: control.py  main.py  netcode.py
python/motor_sensor/: motor.py  sensors.py
